<resources>
    <string name="app_name">Dialer</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
    <string name="dialer_settings">Settings</string>
    <string name="dialer_about">About</string>
    <string name="dialer_map">Map</string>
    <string name="dialer_call_list">Call list</string>
    <string name="dialer_dial">Dial</string>
    <string name="dialer_header">What would you like to do?</string>
    <string name="dial_string">This is the activity for Dial</string>
    <string name="call_list_string">This is the activity for Call list</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Preference Titles -->


    <string name="ok">OK</string>


    <!-- Sync Preferences -->


    <string name="title_activity_maps">MapsActivity</string>

    <!-- About Dialog -->
    <string name="about_info">This app is supposed to mimic the keypad on a phone.\nThe
        app will consist of activities to: \n
                    • Enter numbers to dial \n
                    • See previously dialed numbers \n
                    • Change the keypad settings \n
                    • Show on a Map where previously calls are dialed from</string>
    <string name="about_header">About</string>
    <string name="about_snackbar">You have already seen the about-dialog before.</string>


    <!-- Settings -->
    <string name="setting_storeNumberTitle">Store numbers</string>
    <string name="setting_storeNumberSummary">Dialed telephone numbers are stored so they can be viewed later</string>
    <string name="setting_deleteNumberTitle">Delete stored numbers</string>
    <string name="setting_deleteNumberSummary">Delete stored telephone numbers from storage</string>
    <!-- Activity dial -->
    <string name="title_one">1</string>
    <string name="message_two">ABC</string>
    <string name="title_two">2</string>
    <string name="title_three">3</string>
    <string name="message_three">DEF</string>
    <string name="title_four">4</string>
    <string name="message_four">GHI</string>
    <string name="title_five">5</string>
    <string name="message_five">JKL</string>
    <string name="title_six">6</string>
    <string name="message_six">MNO</string>
    <string name="title_seven">7</string>
    <string name="message_seven">PQRS</string>
    <string name="title_eight">8</string>
    <string name="message_eight">TUV</string>
    <string name="title_nine">9</string>
    <string name="message_nine">WXYZ</string>
    <string name="title_pound">#</string>
    <string name="title_star">✻</string>
    <string name="message_zero">+</string>
    <string name="title_zero">0</string>

    <string name="replace_star">%2A</string>
    <string name="replace_pound">%23</string>

    <string name="tel">tel:</string>

    <!-- Menu options -->
    <string name="menu_settings">Settings</string>

    <string name="pref_filename_key">filename</string>
    <string name="pref_filename_default_value">"phonenumbers.txt"</string>

    <string name="key_delete_phoneNumbers">delete_phoneNumbers</string>
    <string name="phoneNumbersEmpty">No telephone numbers are stored</string>
    <string name="key_save_phoneNumbers">save_phoneNumbers</string>
    <string name="delete">delete</string>
    <string name="dialer_download_voices">Download voices</string>


    <string name="download_voices_address">https://dt031g.programvaruteknik.nu/dialer/voices/</string>
    <string name="URL_KEY">URL_KEY</string>

    <string name="FILEPATH_KEY">FILEPATH_KEY</string>
    <string name="path">/data/data/se.miun.jasv2000.dt031g.dialer/files/voices/</string>
    <string name="downloadFileName">downloadedfile.dps</string>
    <string name="downloading_title">Downloading</string>
    <string name="cancel_message">Cancel</string>
    <string name="download_error">Download error:</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="voice_preference">voice_preference</string>
    <string name="voice_title">Voice</string>
    <string name="key_name">Name</string>
    <string name="default_voice">mamacita_us</string>

    <string name="new_file">Creating new file</string>

    <!-- Title -->
    <string name="settings_title">Settings</string>
    <string name="call_list_title">Call List</string>

    <!-- Error -->
    <string name="error_exception">Exception</string>
    <string name="error_buttonpress">Error with pressing button: </string>
    <string name="error_write_file">File write failed: </string>
    <string name="error_error">Error: </string>


    <!-- DownloadActivity -->
    <string name="cookie">cookie</string>
    <string name="user_agent">User-Agent</string>
    <string name="downloading_file">Downloading File...</string>

    <string name="default_value">default</string>



</resources>