<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

        <SwitchPreferenceCompat
            app:title="@string/setting_storeNumberTitle"
            app:summary="@string/setting_storeNumberSummary"
            app:icon="@drawable/ic_save"
            app:key="@string/key_save_phoneNumbers"
            app:defaultValue="true"
            />

        <Preference
            app:icon="@drawable/ic_delete"
            app:key="@string/key_delete_phoneNumbers"
            app:summary="@string/setting_deleteNumberSummary"
            app:title="@string/setting_deleteNumberTitle" />

        <ListPreference
            app:key="@string/voice_preference"
            app:title="@string/voice_title"
            app:icon="@drawable/icon_voice"
          />

</PreferenceScreen>